clusters/easy-platform/apps/easy-swu/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: easy-swu-api
  namespace: easy-swu
  annotations:
    platform.lazycampus.com/domain-automation: enabled
    platform.lazycampus.com/domain-adopt-existing: "true"
spec:
  ingressClassName: traefik
  rules:
    - host: easy-api.lazycampus.com
      http:
        paths:
          - path: /api/v1
            pathType: Prefix
            backend:
              service:
                name: api
                port:
                  name: http
          - path: /integration/v1
            pathType: Prefix
            backend:
              service:
                name: api
                port:
                  name: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: easy-swu-admin
  namespace: easy-swu
  annotations:
    platform.lazycampus.com/domain-automation: enabled
    platform.lazycampus.com/domain-adopt-existing: "true"
spec:
  ingressClassName: traefik
  rules:
    - host: easy-admin.lazycampus.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: easy-swu-admin
                port:
                  name: http
